spacing should be fixed in return now

--- a/src/components/Return.css
+++ b/src/components/Return.css
@@ -2,10 +2,10 @@
     color: black;
     font-size: 32px;
     text-align: center;
-    margin: 240px 0px 0px 0px;
+    margin: 78px 0px 0px 0px;
 }
 .return__paragraph {
-    margin: 64px;
+    margin: 32px;
     color: black;
     font-size: 22px;
     text-align: center;
@@ -19,7 +19,7 @@
     flex-direction: column;
 }
 
-@media (maxwidth: 756px) {
+@media (max-width: 768px) {
     .return__header {
         font-size: 18px;
         margin: 32px;
